<resources>
    <string name="app_name">Robot</string>
    <string name="sign_in">登录</string>
    <string name="login_text_two">with your App ID</string>
    <string name="hint_username">手机号</string>
    <string name="hint_password">密码</string>
    <string name="sign_in_button">登录</string>
    <string name="sign_up_button">注册</string>
    <string name="forgot_text">忘记密码</string>
    <string name="create_text">注册</string>
    <string name="help_info">请输入您的手机号码，通过手机号码找回您的密码</string>
    <string name="share">分享_标题</string>
    <string name="image_transition_name">image_transition</string>
</resources>