<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.28">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/ico_logo_ffcc00"
                android:layout_width="150sp"
                android:layout_height="150sp" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.42"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_et"
            style="@style/ET_Content_Style"
            android:background="@drawable/shape_et_login"
            android:hint="@string/hint_username"
            />

        <EditText
            style="@style/ET_Content_Style"
            android:layout_marginTop="5dp"
            android:id="@+id/password_et"
            android:background="@drawable/shape_et_login"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/login_bt"
            style="@style/BT_Login_Style"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_bt_login"
            android:elevation="0dp"
            android:text="@string/sign_in_button"
            />
        <Button
            android:id="@+id/register_tv"
            style="@style/BT_Login_Style"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_bt_resign"
            android:elevation="0dp"
            android:text="@string/sign_up_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forgot_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_text"
                android:textColor="@color/colorText"
                android:textSize="15sp"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="-或者你可以使用以下方式登录-"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_qqLogin"
                android:background="@drawable/selector_qq_login_bg"
                android:layout_width="80dp"
                android:layout_height="80dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
